# explicit-discriminant

./: CHAGELOG.md  CODEOWNERS  Cargo.toml  LICENSE  README.md
.github/workflows/: cd.yml  ci.yml
src/: lib.rs
tests/: tests.rs
tests/should_not_compile/: no_explicit_discriminant.rs  no_explicit_discriminant.stderr  not_in_inclusive_range.rs  not_in_inclusive_range.stderr  not_in_inclusive_range_to.rs  not_in_inclusive_range_to.stderr  not_in_many_patterns_mixed_attr.rs  not_in_many_patterns_mixed_attr.stderr  not_in_many_patterns_one_attr.rs  not_in_many_patterns_one_attr.stderr  not_in_range.rs  not_in_range.stderr  not_in_range_from.rs  not_in_range_from.stderr  not_in_range_to.rs  not_in_range_to.stderr  not_literal.rs  not_literal.stderr
