[package]
name = "explicit-discriminant"
version = "0.1.0"
edition = "2021"
authors = ["Ryan Crisanti <rcrisanti@me.com>"]
description = "Macro for enforcing enum discriminants"
license-file = "LICENSE"
readme = "README.md"
repository = "https://github.com/rcrisanti/explicit-discriminant"
homepage = "https://github.com/rcrisanti/explicit-discriminant"
keywords = ["enum", "discriminant", "macro", "pattern"]
categories = ["data-structures"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
proc-macro-error = "1.0.4"
syn = { version = "2.0.28", features = ["full"] }

[dev-dependencies]
trybuild = "1.0.82"
